build: refactor server entry point for script accessibility
- Add a script entry point in `pyproject.toml` for `simple-openstack-mcp` pointing to `server:main`
- Extract the execution code into a `main` function in `server.py` and update the `__main__` block to call it

Signed-off-by: Jimmy Chuang <ogre0403@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,6 @@ dependencies = [
     "fastmcp>=2.9.2",
     "python-openstackclient>=8.1.0",
 ]
+
+[project.scripts]
+simple-openstack-mcp = "server:main"
