chore: revise project structure for improved configuration
- Change `author` to `authors` as an array of dictionaries.
- Update the `project.entry-points` section for console scripts setup.
- Add a `[tool.setuptools]` section specifying `py-modules`.

Signed-off-by: Jimmy Chuang <ogre0403@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,8 @@
 [project]
 name = "simple-openstack-mcp"
-author="choieastsea@gmail.com"
+authors = [
+    {email = "choieastsea@gmail.com"},
+]
 version = "0.1.0"
 description = "Execute openstack cli via LLMs!"
 readme = "README.md"
@@ -10,5 +12,8 @@ dependencies = [
     "python-openstackclient>=8.1.0",
 ]
 
-[project.scripts]
+[project.entry-points."console_scripts"]
 simple-openstack-mcp = "server:main"
+
+[tool.setuptools]
+py-modules = ["server", "commander"]
